<resources>
    <string name="app_name">RRuiz</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="Canape">Canape</string>
    <string name="ImageStorage">ImageStorage</string>
    <string name="imagedetail">ImageDetail</string>
    <string name="cameraimage">CameraImage</string>
    <string name="subir_foto">SUBIR FOTO</string>
    <string name="seleccionar_foto">SELECCIONAR FOTO</string>
    <string name="descripci_n">Descripción</string>
    <string name="canapeimage">CanapeImage</string>
    <string name="detalle">DETALLE</string>
    <string name="entrar">ENTRAR</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="contrase_a">Contraseña</string>
    <string name="cerrar_sesi_n">CERRAR SESIÓN</string>
    <string name="precio">Precio</string>
    <string name="title_activity_detail_pedido2">DetailPedido2</string>
    <string name="a_adir_foto">AÑADIR FOTO</string>
    <string name="nombre">Nombre</string>
    <string name="nombredospuntos">Nombre:</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="n_tlf">Nº tlf</string>
    <string name="fecha">FECHA</string>
    <string name="domicilio2">DOMICILIO</string>
    <string name="domicilio">Domicilio</string>
    <string name="a_adir_producto">AÑADIR PRODUCTO</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="imagenaddcanape">ImagenAddCanape</string>
</resources>
